[package]
name = "wacc_32"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom = "7.1.0"
nom-supreme = "0.6.0"
typed-arena="2.0.1"
wasm-bindgen = "0.2.83"


[dev-dependencies]
rusty-hook = "^0.11.2"
